Implement framework structure according to requirements

--- a/.env
+++ b/.env
@@ -1,3 +1,14 @@
 BASE_URL=http://localhost:3000
 BROWSER=chrome
-HEADLESS=false 
+HEADLESS=false
+
+# MCP Configuration
+MCP_HOST=localhost
+MCP_PORT=8080
+MCP_USERNAME=admin
+MCP_PASSWORD=admin
+
+# Test Environment
+ENVIRONMENT=local
+TEST_BROWSER=chrome
+TEST_PLATFORM=macos 
